# chessengine

./: CMakeLists.txt  library.cpp  library.h  main.cpp
.github/workflows/: cmake.yml
lib/: StringHelpers.cpp  StringHelpers.h
models/: Board.cpp  Board.h  Piece.cpp  Piece.h
tests/: BoardTest.cpp  CMakeLists.txt  PieceTest.cpp  PieceTests.cpp  main.cpp
